syntax = "proto3";

option csharp_namespace = "Torrent";

import "google/protobuf/empty.proto";
package DeleteFiles;

service DeleteFilesService {
  rpc DeleteFiles (DeleteRequest) returns (google.protobuf.Empty) {}
}

message DeleteRequest {
  repeated DeletionFile deletionFiles = 1;
  int32 clientPort = 2;
}

message DeletionFile {
  string fileName = 1;
  string fileHash = 2;
  int64 fileSize = 3;
}